--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
 			<div class="box2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat quisquam debitis id ipsa ipsum blanditiis quidem officia veniam alias, architecto natus unde culpa optio consequuntur, iure commodi corrupti et. Repudiandae?</div><div class="box2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat quisquam debitis id ipsa ipsum blanditiis quidem officia veniam alias, architecto natus unde culpa optio consequuntur, iure commodi corrupti et. Repudiandae?</div><div class="box2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat quisquam debitis id ipsa ipsum blanditiis quidem officia veniam alias, architecto natus unde culpa optio consequuntur, iure commodi corrupti et. Repudiandae?</div><div class="box2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat quisquam debitis id ipsa ipsum blanditiis quidem officia veniam alias, architecto natus unde culpa optio consequuntur, iure commodi corrupti et. Repudiandae?</div><div class="box2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat quisquam debitis id ipsa ipsum blanditiis quidem officia veniam alias, architecto natus unde culpa optio consequuntur, iure commodi corrupti et. Repudiandae?</div>
 		</div>
 	</section>
+	<section>
+		<div class="box">
+			<div class="box2">Lorem ipsum dolor sit, amet consectetur adipisicing, elit. Fugit vel, maxime quod non tenetur vero aperiam, ducimus est? Facilis, est. Reprehenderit consectetur, natus est deleniti! Perferendis ducimus sit deleniti debitis?</div>
+			<div class="box2">Lorem ipsum dolor sit, amet consectetur adipisicing, elit. Debitis dolorum laudantium voluptatibus laboriosam ullam maiores sapiente et. Suscipit harum impedit architecto reprehenderit quam temporibus rem repellat. Iusto animi rem obcaecati.</div>
+			<div class="box2">Lorem ipsum dolor sit, amet consectetur adipisicing, elit. Debitis dolorum laudantium voluptatibus laboriosam ullam maiores sapiente et. Suscipit harum impedit architecto reprehenderit quam temporibus rem repellat. Iusto animi rem obcaecati.</div>
+		</div>
+	</section>
 	<footer>369 89 54</footer>
 </body>
 </html>
